force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>