force-app/main/default/objects/Incident__c/fields/Actual_hrs__c.field-meta.xml
<CustomField>
    <fullName>Actual_hrs__c</fullName>
    <formula>Analysis_Actual__c  +  CUT_Actual__c  +  Deployment_Actual__c  +  Documentation_Actual__c  +  Review_Testing_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>