force-app/main/default/objects/Incident__c/fields/Actual_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_date__c</fullName>
    <label>Actual Start date</label>
    <type>Date</type>
</CustomField>