force-app/main/default/objects/Incident__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <label>Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR System</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>