force-app/main/default/objects/Incident__c/fields/Applies_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Type__c</fullName>
    <label>Applies To Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>