force-app/main/default/objects/Incident__c/fields/Business_Approval_Live_Test_BA2__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval_Live_Test_BA2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Approval Live Test (BA2)</label>
    <type>Checkbox</type>
</CustomField>