force-app/main/default/objects/Incident__c/fields/Business_Approval_UAT_BA1__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval_UAT_BA1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Approval UAT (BA1)</label>
    <type>Checkbox</type>
</CustomField>