force-app/main/default/objects/Incident__c/fields/Business_Requirements_Document_BRD__c.field-meta.xml
<CustomField>
    <fullName>Business_Requirements_Document_BRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Requirements Document (BRD</label>
    <type>Checkbox</type>
</CustomField>