force-app/main/default/objects/Incident__c/fields/Business_Test_Case_BTC__c.field-meta.xml
<CustomField>
    <fullName>Business_Test_Case_BTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Test Case (BTC)</label>
    <type>Checkbox</type>
</CustomField>