force-app/main/default/objects/Incident__c/fields/Code_Review_CoR__c.field-meta.xml
<CustomField>
    <fullName>Code_Review_CoR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code Review (CoR)</label>
    <type>Checkbox</type>
</CustomField>