force-app/main/default/objects/Incident__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Critical/Run Business</fullName>
            </value>
            <value>
                <fullName>2-Mandatory/Legal</fullName>
            </value>
            <value>
                <fullName>3-High/$ Benefits</fullName>
            </value>
            <value>
                <fullName>4-Medium/Efficiency</fullName>
            </value>
            <value>
                <fullName>5-Low/Nice to have</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>