force-app/main/default/objects/Incident__c/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <formula>YEAR( DATEVALUE( Created_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>