force-app/main/default/objects/Incident__c/fields/Deployment_Actual__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deployment Actual Hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>