force-app/main/default/objects/Incident__c/fields/Documentation_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Documentation Estimated Hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>