force-app/main/default/objects/Incident__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>