force-app/main/default/objects/Incident__c/fields/Estimated_hours_ams__c.field-meta.xml
<CustomField>
    <fullName>Estimated_hours_ams__c</fullName>
    <label>Estimated hours</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>