force-app/main/default/objects/Incident__c/fields/Estimated_hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_hrs__c</fullName>
    <formula>Analysis_Estimate__c  +  CUT_Estimated__c  +  Deployment_Estimated__c  +  Documentation_Estimated__c  +  Review_Testing_Estimated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>