force-app/main/default/objects/Incident__c/fields/Impact_Analysis_IA__c.field-meta.xml
<CustomField>
    <fullName>Impact_Analysis_IA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impact Analysis (IA)</label>
    <type>Checkbox</type>
</CustomField>