force-app/main/default/objects/Incident__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident #</label>
    <type>AutoNumber</type>
</CustomField>