force-app/main/default/objects/Incident__c/fields/Incident_No_for_Search__c.field-meta.xml
<CustomField>
    <fullName>Incident_No_for_Search__c</fullName>
    <label>Incident #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>