force-app/main/default/objects/Incident__c/fields/Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Account__c</fullName>
    <label>Owner Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>