force-app/main/default/objects/Incident__c/fields/Planned_End_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_date__c</fullName>
    <label>Planned End date</label>
    <type>Date</type>
</CustomField>