force-app/main/default/objects/Incident__c/fields/Planned_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_date__c</fullName>
    <label>Planned Start date</label>
    <type>Date</type>
</CustomField>