force-app/main/default/objects/Incident__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <label>Ref #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>