force-app/main/default/objects/Incident__c/fields/Release_Checklist_RC__c.field-meta.xml
<CustomField>
    <fullName>Release_Checklist_RC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Checklist (RC)</label>
    <type>Checkbox</type>
</CustomField>