force-app/main/default/objects/Incident__c/fields/Release_Notes_RN__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_RN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Notes (RN)</label>
    <type>Checkbox</type>
</CustomField>