force-app/main/default/objects/Incident__c/fields/Reported_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Department__c</fullName>
    <label>Reported By - Department</label>
    <length>35</length>
    <type>Text</type>
</CustomField>