force-app/main/default/objects/Incident__c/fields/Reported_By_Sub_Department__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Sub_Department__c</fullName>
    <label>Reported By - Sub Department</label>
    <length>25</length>
    <type>Text</type>
</CustomField>