force-app/main/default/objects/Incident__c/fields/Request_for_Change_RFC__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Change_RFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Change (RFC)</label>
    <type>Checkbox</type>
</CustomField>