force-app/main/default/objects/Incident__c/fields/Review_Testing_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Review_Testing_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Review &amp; Peer Testing Estimated Hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>