force-app/main/default/objects/Incident__c/fields/Rework_Actual_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Rework_Actual_Hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rework Actual Hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>