force-app/main/default/objects/Incident__c/fields/Rework_Estimated_hrs__c.field-meta.xml
<CustomField>
    <fullName>Rework_Estimated_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rework Estimated hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>