force-app/main/default/objects/Incident__c/fields/Root_Cause_Analysis_RCA__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_RCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Root Cause Analysis (RCA)</label>
    <type>Checkbox</type>
</CustomField>