force-app/main/default/objects/Incident__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High - Run business</fullName>
            </value>
            <value>
                <fullName>Low - Important but not urgent</fullName>
            </value>
            <value>
                <fullName>Medium - Efficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>