force-app/main/default/objects/Incident__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>