force-app/main/default/objects/Incident__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>15</length>
    <type>Text</type>
</CustomField>