force-app/main/default/objects/Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
                <default>true</default>
                <label>Reported</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Analysis In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Business User Clarification</fullName>
            </value>
            <value>
                <fullName>Pending with Third Party</fullName>
            </value>
            <value>
                <fullName>Implementation In Progress</fullName>
            </value>
            <value>
                <fullName>Coding Complete / System Testing</fullName>
            </value>
            <value>
                <fullName>Pending User Confirmation</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>