force-app/main/default/objects/Incident__c/fields/Steps_to_reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_reproduce__c</fullName>
    <label>Steps to reproduce</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>