force-app/main/default/objects/Incident__c/fields/System_Outage__c.field-meta.xml
<CustomField>
    <fullName>System_Outage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Outage</label>
    <type>Checkbox</type>
</CustomField>