force-app/main/default/objects/Incident__c/fields/Time_Since_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Status_Date__c</fullName>
    <formula>TODAY()  -  DATEVALUE(  Status_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Status Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>