force-app/main/default/objects/Incident__c/fields/Unit_Test_Case_UTC__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Case_UTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Test Case (UTC)</label>
    <type>Checkbox</type>
</CustomField>