force-app/main/default/objects/Incident__c/fields/Unit_Testing_Actual_hrs__c.field-meta.xml
<CustomField>
    <fullName>Unit_Testing_Actual_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Testing Actual hrs</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>