force-app/main/default/objects/Incident__c/validationRules/Actual_End_date_must_be_greater_than_str.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_End_date_must_be_greater_than_str</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Actual_End_Date__c  &lt;  Actual_Start_date__c , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Actual_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be less than Start Date</errorMessage>
</ValidationRule>