force-app/main/default/objects/Incident__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Planned_End_date__c  &lt;  Planned_Start_date__c , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Planned_End_date__c</errorDisplayField>
    <errorMessage>End Date cannot be less than Start Date</errorMessage>
</ValidationRule>