force-app/main/default/objects/Incident__c/validationRules/Estimates_cannot_be_negative_analysis.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimates_cannot_be_negative_analysis</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Analysis_Estimate__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Analysis_Estimate__c</errorDisplayField>
    <errorMessage>Estimates cannot be negative.</errorMessage>
</ValidationRule>