force-app/main/default/objects/Incident__c/validationRules/Estimates_cannot_be_negative_CUT.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimates_cannot_be_negative_CUT</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CUT_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>CUT_Estimated__c</errorDisplayField>
    <errorMessage>Estimates cannot be negative.</errorMessage>
</ValidationRule>