force-app/main/default/objects/Incident__c/validationRules/Estimates_cannot_be_negative_docum.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimates_cannot_be_negative_docum</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Documentation_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Documentation_Estimated__c</errorDisplayField>
    <errorMessage>Estimates cannot be negative.</errorMessage>
</ValidationRule>