force-app/main/default/objects/Incident__c/validationRules/Estimates_cannot_be_negative_review.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimates_cannot_be_negative_review</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Review_Testing_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Review_Testing_Estimated__c</errorDisplayField>
    <errorMessage>Estimates cannot be negative.</errorMessage>
</ValidationRule>