force-app/main/default/objects/Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident__c</columns>
    <columns>Summary__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Status_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>