force-app/main/default/objects/Incident__c/listViews/My_Open_Incidents.listView-meta.xml
<ListView>
    <fullName>My_Open_Incidents</fullName>
    <columns>Incident__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Open Incidents</label>
</ListView>