force-app/main/default/objects/Incident__c/listViews/My_Teams_Open_Incidents.listView-meta.xml
<ListView>
    <fullName>My_Teams_Open_Incidents</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Team&apos;s Open Incidents</label>
</ListView>